--- a/index.html
+++ b/index.html
@@ -102,3 +102,5 @@
    
 
     <p>University of Awesome motto: "Be awesome to each other." -- <em>The memoirs of Bill S Preston, <abbr title="Esquire">Esq</abbr></em></p>
+</body
+    </html>
